fix(cors): add Vercel preview deployment support Current CORS config only allowed exact origin matches from the CORS_ORIGINS allowlist, blocking Vercel preview deployments (e.g., vlogspherefrontend-pr123.vercel.app). Added safe pattern matching for Vercel preview URLs: - Only allows https://vlogspherefrontend-*.vercel.app - Prevents overly broad .vercel.app wildcarding - Maintains strict origin validation for security Also fixed origin parsing by adding .trim() to handle whitespace in comma-separated CORS_ORIGINS list. Fixes: Preview deployments blocked by CORS, production mismatches Test: Verified localhost, Vercel preview URLs allowed; evil.com blocked

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,6 +20,7 @@ FRONTEND_URL=https://vlogspherefrontend.vercel.app
 
 # CORS Origins (comma-separated list)
 # Production: Include both production frontend and localhost for dev
+# Note: Vercel preview deployments (vlogspherefrontend-*.vercel.app) are automatically supported
 CORS_ORIGINS=https://vlogspherefrontend.vercel.app,http://localhost:3000
 
 # JWT Secrets
