--- a/backend/package.json
+++ b/backend/package.json
@@ -47,6 +47,7 @@
     "eslint-plugin-import": "^2.28.1",
     "fast-check": "^4.3.0",
     "jest": "^29.6.2",
+    "mongodb-memory-server": "^11.0.1",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
   },
