--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
+    "worker:email": "node src/workers/emailWorker.js",
     "test": "jest",
     "lint": "eslint src/",
     "seed": "node src/utils/seedDatabase.js"
