refactor: rebrand Vlog to Capsule and fix desktop sidebar layout

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -46,7 +46,7 @@ REDIS_PORT=6379
 # Get API key from: https://resend.com/api-keys
 RESEND_API_KEY=re_your_resend_api_key_here
 FROM_EMAIL=noreply@yourdomain.com
-FROM_NAME=VlogSphere
+FROM_NAME=Capsule
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000  # 15 minutes
