--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,11 +1,11 @@
 # API Configuration
 # IMPORTANT: Set these in Vercel environment variables for production
-# Production: https://vlogsphere-backend.onrender.com/api
+# Production: https://capsule-backend.onrender.com/api
 # Development: http://localhost:5000/api
 VITE_API_URL=http://localhost:5000/api
 
 # App URL
-# Production: https://vlogspherefrontend.vercel.app
+# Production: https://capsule-frontend.vercel.app
 # Development: http://localhost:3000
 VITE_APP_URL=http://localhost:3000
 
@@ -23,8 +23,8 @@ VITE_DEFAULT_THEME=noir-velvet
 # For Vercel:
 # 1. Go to your project settings → Environment Variables
 # 2. Add the following variables for Production:
-#    - VITE_API_URL=https://vlogsphere-backend.onrender.com/api
-#    - VITE_APP_URL=https://vlogspherefrontend.vercel.app
+#    - VITE_API_URL=https://capsule-backend.onrender.com/api
+#    - VITE_APP_URL=https://capsule-frontend.vercel.app
 #    - VITE_NODE_ENV=production
 # 3. Redeploy your application
 #
